# NEFT

./: .gitignore  2021-05-25_125032.csv  CMakeLists.txt  README.md  plot_data.m
NEFT/: CMakeLists.txt
NEFT/include/NEFT/: dna.hpp  layer.hpp  matrix2.hpp  nn.hpp  organism.hpp  population.hpp  utils.hpp
NEFT/src/: dna.cpp  layer.cpp  matrix2.cpp  nn.cpp  organism.cpp  population.cpp  utils.cpp
include/: bird.hpp  player.hpp  wall.hpp  wall_manager.hpp
src/: bird.cpp  main.cpp  player.cpp  wall.cpp  wall_manager.cpp
